# Ray_Tracing_Proj

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
source/main/: hittable.h  ray.h  sphere.h
source/tests/: tests.cpp
